# Collections

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: ci.yml
benchmark/: CMakeLists.txt  main.cpp
include/collections/concurrency/: error.hpp  future.hpp  iexecutor.hpp  result.hpp  task_count.hpp  thread_pool.hpp  twist_wrapper.hpp
include/collections/expiremantal/: atomic.hpp  atomic.ipp  memory_order.hpp  mutex.hpp  spinlock.hpp
include/collections/memory/: Allocator.hpp
include/collections/queue/: dummy_threadsafe_queue.hpp  hazard_pointer.hpp  lockfree_queue.hpp  threadsafe_queue.hpp  work_stealing_queue.hpp
include/collections/rstd/: unique_function.hpp
include/collections/rstl/: unique_function.hpp
include/collections/util/: fmt.hpp
include/joker/concurrency/: error.hpp  future.hpp  iexecutor.hpp  thread_pool.hpp  twist_wrapper.hpp
include/joker/expiremantal/: atomic.hpp  memory_order.hpp  mutex.hpp
include/joker/queue/: work_stealing_queue.hpp
include/joker/rstl/: unique_function.hpp
sandbox/: CMakeLists.txt  benchmark.cpp  benchmark.hpp  main.cpp
source/concurrency/: iexecutor.cpp  thread_pool.cpp
tests/: CMakeLists.txt
tests/concurrency/: CMakeLists.txt  async_tests.cpp  future_tests.cpp
tests/rstd/: CMakeLists.txt  unique_function_tests.cpp
tests/rstl/: CMakeLists.txt  unique_function_tests.cpp
tests/util/: CMakeLists.txt
